<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <FrameLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/register_bg"
        android:paddingBottom="20dp" >

        <LinearLayout
            android:id="@+id/register_choose_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/register_new_main_text"
                    android:textColor="#FF393939"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/register_new_sub_text"
                    android:textColor="#FFcccccc"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="2dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <EditText
                                android:id="@+id/register_name"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:background="@drawable/login_view_input_bg"
                                android:gravity="bottom"
                                android:hint="@string/register_name"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingBottom="6dp"
                                android:textColor="#FF666666"
                                android:textColorHint="#FFcccccc"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:visibility="gone" >

                                <TextView
                                    android:id="@+id/checkbox_male"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:background="@drawable/login_view_input_bg"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:gravity="center_vertical"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:text="@string/male"
                                    android:textColor="@color/register_sex_uncheck"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/checkbox_female"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:background="@drawable/login_view_input_bg"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:gravity="center_vertical"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:text="@string/female"
                                    android:textColor="@color/register_sex_uncheck"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/register_avatar"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/register_avatar_bg"
                            android:scaleType="centerInside"
                            android:visibility="gone" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/login_view_input_bg"
                        android:gravity="bottom"
                        android:hint="@string/login_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="6dp"
                        android:textColor="#FF666666"
                        android:textColorHint="#FFcccccc"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/login_view_input_bg"
                        android:gravity="bottom"
                        android:hint="@string/login_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="6dp"
                        android:password="true"
                        android:textColor="#FF666666"
                        android:textColorHint="#FFcccccc"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent" >

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/draw_round_tangle_jing_green"
                    android:gravity="center"
                    android:text="@string/register_submit"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>