<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <FrameLayout
        android:layout_width="295dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:background="@drawable/register_bg" >

        <LinearLayout
            android:id="@+id/register_choose_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/login_forgot_password_main_text"
                    android:textColor="#FF393939"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/login_forgot_password_sub_text"
                    android:textColor="#FFcccccc"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/transparent"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/login_view_input_bg"
                        android:gravity="bottom"
                        android:hint="@string/login_forgot_password_email"
                        android:imeOptions="actionSend"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="6dp"
                        android:textColor="#FF666666"
                        android:textColorHint="#FFcccccc"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent" >

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/draw_round_tangle_jing_green"
                    android:gravity="center"
                    android:text="@string/login_forgot_password_button"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>