<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <FrameLayout
        android:layout_width="295dp"
        android:layout_height="255dp"
        android:layout_gravity="center"
        android:background="@drawable/register_bg" >

        <LinearLayout
            android:id="@+id/register_choose_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:text="@string/login_new_main_text"
                    android:gravity="center"
                    android:textColor="#FF393939"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/login_new_sub_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:textColor="#FFcccccc"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/transparent"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/login_view_input_bg"
                        android:gravity="bottom"
                        android:hint="@string/login_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="6dp"
                        android:textColor="#FF666666"
                        android:textColorHint="#FFcccccc"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:gravity="bottom"
                        android:hint="@string/login_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="6dp"
                        android:password="true"
                        android:background="@drawable/login_view_input_bg"
                       	android:textColor="#FF666666"
                        android:textColorHint="#FFcccccc"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent" >

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/draw_round_tangle_jing_green"
                    android:gravity="center"
                    android:text="@string/login_button"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignTop="@+id/button_submit"
                    android:layout_toRightOf="@+id/button_submit"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="忘记密码?"
                    android:textColor="#FF888888"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>