<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <FrameLayout
        android:layout_width="295dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:background="@drawable/register_bg" >

        <LinearLayout
            android:id="@+id/register_choose_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/login_select_title"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:gravity="center"
                        android:textColor="#FF393939"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/login_select_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:textColor="#FFcccccc"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:background="@null"
                        android:gravity="left|center_vertical"
                        android:text="@string/register_cancel"
                        android:textColor="#FF62a946"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:weightSum="3" >

                    <TextView
                        android:id="@+id/type_weibo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/draw_round_tangle_jing_green"
                        android:gravity="center"
                        android:text="@string/register_weibo"
                        android:textColor="@color/white_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!--
                             <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/register_weibo"
                            android:textSize="16sp"
                            android:textColor="@color/white_text"
                            android:textStyle="bold" />
                    -->

                    <LinearLayout
                        android:id="@+id/type_renren"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/draw_round_tangle_jing_green"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/register_renren"
                            android:textColor="@color/white_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/type_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/draw_round_tangle_red"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/register_email"
                            android:textColor="@color/white_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bottombg"
                android:visibility="gone" >

                <!-- android:background="#FFFF0000" > -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/main_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="#FF6b8a00"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/register_new_main_text"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sub_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/register_new_sub_text"
                        android:textColor="#FFc2dfb7"
                        android:textSize="9sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>